--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,10 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+.dev/
+.ext/
+.vscode/
+!.vscode/launch.json
 
-# Test binary, built with `go test -c`
-*.test
+cover.out
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
-/dist
-/.ext
-/bin
-/cover.out
+bin/
+dist/
 /aserto-idp-plugin-auth0
