--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "multierror",
         "stretchr",
         "structpb",
-        "timestamppb"
+        "timestamppb",
+        "Upsert"
     ]
 }
